--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     image: minio/minio:latest
     command: server /data --console-address ":9001"
     environment:
-      MINIO_ROOT_USER: minioadmin
-      MINIO_ROOT_PASSWORD: minioadmin
+      MINIO_ROOT_USER: ${BLOB_DB_USERNAME}
+      MINIO_ROOT_PASSWORD: ${BLOB_DB_PASSWORD}
     ports:
       - "9000:9000"   # S3 API
       - "9001:9001"   # MinIO Console
