--- a/local-env/docker-compose.yml
+++ b/local-env/docker-compose.yml
@@ -9,6 +9,18 @@ services:
     networks:
       - backend
 
+  create-bucket:
+    image: minio/mc:latest
+    depends_on:
+      - minio
+    entrypoint: >
+      /bin/sh -c "
+        mc alias set myminio http://minio:9000 minioadmin minioadmin &&
+        mc mb myminio/my-bucket || echo 'Bucket already exists';
+      "
+    networks:
+      - backend
+
 #  mysql:
 #    image: mysql:8.3
 #    container_name: mysql
