--- a/.github/workflows/branch-workflow.yml
+++ b/.github/workflows/branch-workflow.yml
@@ -16,11 +16,11 @@ jobs:
       - uses: actions/checkout@v3
 
       -
-        name: Set up JDK 17
+        name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
-          distribution: 'zulu'
+          java-version: '21'
+          distribution: 'corretto'
           cache: maven
 
       -
