--- a/local-env/docker-compose.yml
+++ b/local-env/docker-compose.yml
@@ -20,21 +20,18 @@ services:
       "
     networks:
       - backend
-
-#  mysql:
-#    image: mysql:8.3
-#    container_name: mysql
-#    environment:
-#      MYSQL_ROOT_PASSWORD: rootpass
-#      MYSQL_DATABASE: app_db
-#      MYSQL_USER: app_user
-#      MYSQL_PASSWORD: app_pass
-#    ports:
-#      - "3306:3306"
-#    volumes:
-#      - mysql-data:/var/lib/mysql
-#    networks:
-#      - backend
+  mysql:
+    image: mysql:8.3
+    container_name: mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: rootpass
+      MYSQL_DATABASE: app_db
+      MYSQL_USER: app_user
+      MYSQL_PASSWORD: app_pass
+    ports:
+      - "3306:3306"
+    networks:
+      - backend
 
 networks:
   backend:
