--- a/webapp/src/main/resources/application.yml
+++ b/webapp/src/main/resources/application.yml
@@ -5,15 +5,9 @@ spring:
       max-request-size: 50MB
   datasource:
     url: jdbc:mysql://localhost:3306/user_db
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    username: ${USER_DB_USERNAME}
+    password: ${USER_DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
-  jpa:
-    hibernate:
-      ddl-auto: update
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
 
 bucket:
   host: localhost
