--- a/local-env/docker-compose.yml
+++ b/local-env/docker-compose.yml
@@ -26,8 +26,8 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: rootpass
       MYSQL_DATABASE: app_db
-      MYSQL_USER: app_user
-      MYSQL_PASSWORD: app_pass
+      MYSQL_USER: ${USER_DB_USERNAME}
+      MYSQL_PASSWORD: ${USER_DB_PASSWORD}
     ports:
       - "3306:3306"
     networks:
