--- a/webapp/src/main/resources/application-prod.yml
+++ b/webapp/src/main/resources/application-prod.yml
@@ -3,6 +3,11 @@ spring:
     multipart:
       max-file-size: 50MB
       max-request-size: 50MB
+  datasource:
+    url: jdbc:mysql://mysql:3306/users
+    username: ${USER_DB_USERNAME}
+    password: ${USER_DB_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
 bucket:
   host: minio
