--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     networks:
       - backend
 
+# TODO the volume should be mounted to a specific folder in the host
   minio:
     container_name: minio
     image: minio/minio:latest
