--- a/local-env/docker-compose.yml
+++ b/local-env/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     container_name: mysql
     environment:
       MYSQL_ROOT_PASSWORD: rootpass
-      MYSQL_DATABASE: users
+      MYSQL_DATABASE: patient-manager-db
       MYSQL_USER: user
       MYSQL_PASSWORD: password
     ports:
@@ -38,4 +38,3 @@ services:
 
 networks:
   backend:
-
