--- a/webapp/src/main/resources/application-prod.yml
+++ b/webapp/src/main/resources/application-prod.yml
@@ -4,7 +4,7 @@ spring:
       max-file-size: 50MB
       max-request-size: 50MB
   datasource:
-    url: jdbc:mysql://mysql:3306/users
+    url: jdbc:mysql://mysql:3306/patient-manager-db
     username: ${USER_DB_USERNAME}
     password: ${USER_DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
