--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -33,8 +33,8 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: rootpass
       MYSQL_DATABASE: patient-manager-db
-      MYSQL_USER: ${USER_DB_USERNAME}
-      MYSQL_PASSWORD: ${USER_DB_PASSWORD}
+      MYSQL_USER: ${PATIENT_DB_USERNAME}
+      MYSQL_PASSWORD: ${PATIENT_DB_PASSWORD}
     ports:
       - "3306:3306"
     volumes:
