--- a/webapp/src/main/resources/application-prod.yml
+++ b/webapp/src/main/resources/application-prod.yml
@@ -5,8 +5,8 @@ spring:
       max-request-size: 50MB
   datasource:
     url: jdbc:mysql://mysql:3306/patient-manager-db
-    username: ${USER_DB_USERNAME}
-    password: ${USER_DB_PASSWORD}
+    username: ${PATIENT_DB_USERNAME}
+    password: ${PATIENT_DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 bucket:
