--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.14",
+    "@mui/icons-material": "^5.15.14",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "react": "^18.2.0",
