--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "patient-manager-frontend",
   "version": "1.0.0",
   "description": "Patient Manager Frontend",
   "scripts": {
