--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,13 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.14",
     "@mui/icons-material": "^5.15.14",
+    "@mui/material": "^5.15.14",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "typescript": "^5.4.2"
   },
   "devDependencies": {
@@ -26,6 +27,7 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
+    "miragejs": "^0.1.48",
     "style-loader": "^3.3.4",
     "ts-loader": "^9.5.1",
     "webpack": "^5.90.3",
@@ -33,4 +35,3 @@
     "webpack-dev-server": "^5.0.2"
   }
 }
-
