--- a/local-env/docker-compose.yml
+++ b/local-env/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     entrypoint: >
       /bin/sh -c "
         mc alias set myminio http://minio:9000 minioadmin minioadmin &&
-        mc mb myminio/my-bucket || echo 'Bucket already exists';
+        mc mb myminio/patient-manager-bucket || echo 'Bucket already exists';
       "
     networks:
       - backend
