--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "webpack serve --mode development --open",
     "build": "webpack --mode production",
+    "clean": "rm -rf dist/*",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
