Fix frontend pom

--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -49,30 +49,44 @@
                     <workingDirectory>${project.basedir}</workingDirectory>
                 </configuration>
                 <executions>
+                    <!-- Ensure Node is installed before any clean/build tasks -->
+                    <execution>
+                        <id>install node and npm (pre-clean)</id>
+                        <phase>pre-clean</phase>
+                        <goals>
+                            <goal>install-node-and-npm</goal>
+                        </goals>
+                    </execution>
                     <execution>
                         <id>install node and npm</id>
+                        <phase>generate-resources</phase>
                         <goals>
                             <goal>install-node-and-npm</goal>
                         </goals>
                     </execution>
                     <execution>
                         <id>npm install</id>
+                        <phase>generate-resources</phase>
                         <goals>
                             <goal>npm</goal>
                         </goals>
+                        <configuration>
+                            <arguments>install</arguments>
+                        </configuration>
                     </execution>
                     <execution>
                         <id>clean previous build</id>
+                        <phase>clean</phase>
                         <goals>
                             <goal>npm</goal>
                         </goals>
-                        <phase>clean</phase>
                         <configuration>
                             <arguments>run clean</arguments>
                         </configuration>
                     </execution>
                     <execution>
                         <id>npm run build</id>
+                        <phase>generate-resources</phase>
                         <goals>
                             <goal>npm</goal>
                         </goals>
