--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>com.myprojects</groupId>
             <artifactId>domain</artifactId>
             <version>1.0-SNAPSHOT</version>
