--- a/adapters/pom.xml
+++ b/adapters/pom.xml
@@ -15,12 +15,18 @@
 
     <name>adapters</name>
 
+    <properties>
+        <awssdk.version>2.31.62</awssdk.version>
+        <mysql-connector-java.version>8.0.33</mysql-connector-java.version>
+        <h2.version>2.2.224</h2.version>
+    </properties>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>software.amazon.awssdk</groupId>
                 <artifactId>bom</artifactId>
-                <version>2.31.62</version>
+                <version>${awssdk.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -48,13 +54,12 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.33</version>
+            <version>${mysql-connector-java.version}</version>
         </dependency>
-        <!-- H2 database for tests -->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>2.2.224</version>
+            <version>${h2.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
