--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -85,6 +85,16 @@
                         </configuration>
                     </execution>
                     <execution>
+                        <id>npm test</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                        <configuration>
+                            <arguments>run test</arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
                         <id>npm run build</id>
                         <phase>generate-resources</phase>
                         <goals>
