--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,9 @@ jobs:
     - name: Test
       run: mvn verify
 
+    - name: FE Test
+      run: cd ./frontend && npm run test
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
