--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
     "babel-loader": "^9.1.3",
+    "builder-pattern": "2.2.0",
     "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
     "identity-obj-proxy": "^3.0.0",
