FE improvements II (#35)
* Refactor the operation type page

* Refactor the operation type page

* Refactor the patient page

* Refactor the operation page

* Refactor the patient search

* Refactor the patient search

* Align hooks return type names

* Tests setup

* Adds FE test step in the maven build

* Adds FE test step in the maven build

* Adds FE test step in the maven build

* Adds FE test step in the maven build

* Adds test for the amount formatter

* Adds test for the amount formatter

* operation form adapter test

* operation form adapter test

* operation form adapter test

* operation form adapter test

* currency utils test

* currency utils test

* currency utils test

* More tests for the utils functions

* Test the operation form validator

* Test the operation form validator

---------

Co-authored-by: Davide Botti <davidebotti92@gmail.com>
Co-authored-by: dbotti <davide.botti@lastminute.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,11 @@ jobs:
     - name: Build
       run: mvn -B package -DskipTests --file pom.xml
 
-    - name: Test
+    - name: BE Test
       run: mvn verify
+
+    - name: FE Test
+      run: cd ./frontend && npm run test
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
