--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "start": "webpack serve --mode development --open",
     "build": "webpack --mode production",
     "clean": "rm -rf dist/*",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -25,11 +26,19 @@
     "@babel/preset-env": "^7.24.0",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "babel-loader": "^9.1.3",
+    "builder-pattern": "2.2.0",
     "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "miragejs": "^0.1.48",
     "style-loader": "^3.3.4",
+    "ts-jest": "^29.4.5",
     "ts-loader": "^9.5.1",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
